tests/bad-endif-1.c
// error: too many '#endif's

#endif
